# OPERATOR-OS

./: .codex-running-project.json  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.agents/memory/: MEMORY.md  conductor-arch.md  conductor-python.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/mockup-sandbox/: vite.config.ts
attached_assets/: Pasted--CONDUCTOR-Agent-Routing-Task-Decomposition-OS-Project-_1783916214952.txt
lib/api-spec/: openapi.yaml
