[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "ruff>=0.15.21",
    "uvicorn[standard]>=0.51.0",
]
